Fix mobile alignment for .btn2 button

--- a/src/components/portfolio/resume.css
+++ b/src/components/portfolio/resume.css
@@ -55,3 +55,18 @@
   color: white;
   text-decoration: none;
 }
+@media screen and (max-width:768px){
+  .btn2{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+
+  }
+
+
+  
+}
+
+
+
